Change to strings double quotes standard

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,40 @@
-/.bundle/
-/.yardoc
-/_yardoc/
-/coverage/
-/doc/
-/pkg/
-/spec/reports/
-/tmp/
-
-.DS_Store
+.yardoc/
+_yardoc/
+coverage/
+pkg/
+spec/reports/
+spec/coverage/
+tmp/
 
 # rspec failure tracking
 .rspec_status
-coverage
-*.gem
+
+### macOS
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
