Add rubocop performance, rspec and rake cops

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,10 @@
 inherit_from: .rubocop_todo.yml
 
+require:
+  - rubocop-performance
+  - rubocop-rake
+  - rubocop-rspec
+
 AllCops:
   NewCops: enable
   TargetRubyVersion: 2.5
@@ -18,4 +23,3 @@ Style/StringLiterals:
 Style/StringLiteralsInInterpolation:
   Enabled: true
   EnforcedStyle: double_quotes
-
