Update gems, code maintenance
* Migrate to asdf from rvm
* Change format to legacy document
* Upgrade old gems
* Bump to v3 as this is project's the third iteration

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,7 +16,7 @@ AllCops:
 
 Layout/LineLength:
   Max: 120
-  IgnoredPatterns: ['^\s*#']
+  AllowedPatterns: ['^\s*#']
 
 Style/StringLiterals:
   Enabled: true
