refactor: move document rename to its own object

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -26,3 +26,6 @@ Style/StringLiterals:
 Style/StringLiteralsInInterpolation:
   Enabled: true
   EnforcedStyle: double_quotes
+
+Layout/HashAlignment:
+  EnforcedHashRocketStyle: table
