--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,7 @@ repos:
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
+        exclude: ^.idea/
       - id: check-yaml
       - id: check-added-large-files
       - id: check-executables-have-shebangs
